manifests/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: grafana
  labels:
    app: grafana
spec:
  type: NodePort
  ports:
  - port: 3000
    protocol: TCP
    nodePort: 30902
    targetPort: web
  selector:
    app: grafana
