manifests/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.internal.jesses.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
